--- a/src/scss/populargoods-common.scss
+++ b/src/scss/populargoods-common.scss
@@ -93,6 +93,7 @@
     }
 
     &:hover {
+      z-index: 1;
       .goods-item {     
         &__price {
           opacity: 1;
@@ -113,6 +114,12 @@
     &__title {
       font-size: 28px;
       line-height: 35px;
+    }
+
+    li {
+      &:nth-child(4) {
+        display: none;
+      }
     }
 
     .goods-item {
@@ -137,10 +144,6 @@
         line-height: 33px;
       }
 
-      &:nth-child(4) {
-        display: none;
-      }
-
       &:hover {
         height: 680px;
       }
@@ -150,8 +153,15 @@
 
 @media screen and (max-width: 992px) {
   .populargoods-common {
+    li {
+      &:nth-child(3) {
+        display: none;
+      }
+    }
+
     .goods-item {
       height: 520px;
+
       &__title {
         font-size: 20px;
         line-height: 25px;
@@ -164,9 +174,6 @@
         font-size: 24px;
         line-height: 30px;
       }
-      &:nth-child(3) {
-        display: none;
-      }
 
       &:hover {
         height: 645px;
@@ -178,15 +185,15 @@
 
 @media screen and (max-width: 768px) {
   .populargoods-common {
-    &__goods-list {
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .goods-item {
+    li {
       &:nth-child(2) {
         display: none;
       }
+    }
+
+    &__goods-list {
+      flex-direction: column;
+      align-items: center;
     }
   }
 }
